--- a/register.html
+++ b/register.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf8">
     <title>注册</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
 <header>
@@ -10,7 +12,7 @@
 </header>
 <h1>创建帐户</h1>
 <section>
-<form action="#" method="POST">
+<form action="#" method="POST" autocomplete="off">
     <p>
         用户名（只支持大小写字母、数字和下划线）<br>
         <input type="username" name="username" pattern="([a-z]|[A-Z]|[0-9]|[_])+" required>
